Infor for <Jiho Park>

--- a/sp18.md
+++ b/sp18.md
@@ -9,3 +9,5 @@ Spring 2018 meetings will take place every **Thursday from 5:00PM to 6:30PM at A
 This semester, we'll be creating a variety of C++ utility programs and web scrapers as well as working with a local startup, Acutulus Enterprises, to create a web application as a tie-in to one of their projects.
 
 ## **Club members**
+#### **Jiho Park**
+Hey, I've been a computer science student for two years now and I just love coding. [Find me on Github!](https://github.com/JihoPark21)
