Intro for Ryan Lehmer

--- a/sp18.md
+++ b/sp18.md
@@ -11,3 +11,6 @@ This semester, we'll be creating a variety of C++ utility programs and web scrap
 ## **Club members**
 #### **Yang Liu**
 Hi fellow nerds. I'm a newb coder wanting to improve. [My GitHub is](https://github.com/liuyang3141/dvcoders.github.io.git)
+
+#### **Ryan Lehmer**
+Hey I'm just here to see if this peaks any more of my interest [the quest on github that leads you to me is] (https://github.com/dvcoders-ryan/dvcoders.github.io.git)
